🐛 Fixed a bug that the bottom of the .menu is not visible on mobile

--- a/style.css
+++ b/style.css
@@ -648,7 +648,7 @@ address {
   .menu * {
     color: #fff; }
   .menu .menu-contents {
-    padding: 110px 40px 50px; }
+    padding: 110px 40px 0; }
   .menu-nav, .menu-util {
     margin-bottom: 62px; }
   .menu-nav-item:not(:last-child) {
@@ -681,6 +681,7 @@ address {
     letter-spacing: 0.3px;
     text-transform: uppercase; }
   .menu-footer {
+    margin-bottom: 50px;
     font-size: 11px;
     font-weight: 900;
     line-height: 1.36em;
